--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "4.3.0",
     "@angular/router": "3.4.0",
     "@angular/upgrade": "4.3.0",
+    "@types/jquery": "^3.2.15",
     "angular-in-memory-web-api": "0.3.1",
     "bootstrap": "3.3.6",
     "core-js": "2.4.1",
