--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "4.3.0",
+    "@angular/common": "^2.4.0",
     "@angular/compiler": "4.3.0",
-    "@angular/core": "4.3.0",
+    "@angular/core": "^2.4.0",
     "@angular/forms": "4.3.0",
     "@angular/http": "4.3.0",
-    "@angular/platform-browser": "4.3.0",
+    "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "4.3.0",
     "@angular/router": "3.4.0",
     "@angular/upgrade": "4.3.0",
@@ -27,7 +27,7 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
     "systemjs": "0.19.27",
-    "zone.js": "0.7.2"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "bower-files": "3.11.3",
