--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "4.3.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "4.3.0",
-    "@angular/http": "4.3.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "4.3.0",
+    "@angular/common": "2.4.0",
+    "@angular/compiler": "2.4.0",
+    "@angular/core": "2.4.0",
+    "@angular/forms": "2.4.0",
+    "@angular/http": "2.4.0",
+    "@angular/platform-browser": "2.4.0",
+    "@angular/platform-browser-dynamic": "2.4.0",
     "@angular/router": "3.4.0",
-    "@angular/upgrade": "4.3.0",
-    "@types/jquery": "^3.2.15",
+    "@angular/upgrade": "2.4.0",
+    "bootstrap": "v4.0.0-beta",
     "angular-in-memory-web-api": "0.3.1",
-    "bootstrap": "3.3.6",
     "core-js": "2.4.1",
-    "ng-drag-drop": "^4.0.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.8.18"
+    "zone.js": "0.7.2",
+    "systemjs": "0.19.27"
   },
   "devDependencies": {
     "bower-files": "3.11.3",
@@ -45,4 +43,3 @@
     "typescript": "2.2.2",
     "typings": "1.3.2"
   }
-}
